--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         </table>
 
         <!-- JS -->
-        <script src = "https://code.jquery.com/jquery-3.7.0.slim.min.js"></script>
+        <script src = "https://unpkg.com/@popperjs/core@2"></script>
         <script src = "./src/main.js"></script>
     </body>
 </html>
