--- a/index.html
+++ b/index.html
@@ -13,72 +13,11 @@
         <title>Statuspage</title>
     </head>
     <body>
+        <h3 id = "header">iiPython System Status</h3>
         <table id = "table">
-            <tbody>
-                <tr>
-                    <td>
-                        <p>hello world</p>
-                        <p class = "state color-green">online</p>
-                        <div class = "status-container">
-                            <div class = "indicator i-online"></div>
-                            <div class = "indicator i-online"></div>
-                            <div class = "indicator i-online"></div>
-                            <div class = "indicator i-online"></div>
-                            <div class = "indicator i-online"></div>
-                            <div class = "indicator i-online"></div>
-                            <div class = "indicator i-online"></div>
-                            <div class = "indicator i-online"></div>
-                            <div class = "indicator i-online"></div>
-                            <div class = "indicator i-online"></div>
-                            <div class = "indicator i-online"></div>
-                            <div class = "indicator i-online"></div>
-                            <div class = "indicator i-online"></div>
-                            <div class = "indicator i-online"></div>
-                            <div class = "indicator i-online"></div>
-                            <div class = "indicator i-online"></div>
-                            <div class = "indicator i-online"></div>
-                            <div class = "indicator i-online"></div>
-                            <div class = "indicator i-online"></div>
-                            <div class = "indicator i-online"></div>
-                            <div class = "indicator i-online"></div>
-                            <div class = "indicator i-online"></div>
-                            <div class = "indicator i-online"></div>
-                            <div class = "indicator i-online"></div>
-                            <div class = "indicator i-online"></div>
-                            <div class = "indicator i-online"></div>
-                            <div class = "indicator i-online"></div>
-                            <div class = "indicator i-online"></div>
-                            <div class = "indicator i-online"></div>
-                            <div class = "indicator i-online"></div>
-                            <div class = "indicator i-online"></div>
-                            <div class = "indicator i-online"></div>
-                            <div class = "indicator i-online"></div>
-                            <div class = "indicator i-online"></div>
-                            <div class = "indicator i-online"></div>
-                            <div class = "indicator i-online"></div>
-                            <div class = "indicator i-online"></div>
-                            <div class = "indicator i-online"></div>
-                            <div class = "indicator i-online"></div>
-                            <div class = "indicator i-online"></div>
-                            <div class = "indicator i-online"></div>
-                            <div class = "indicator i-online"></div>
-                            <div class = "indicator i-online"></div>
-                            <div class = "indicator i-online"></div>
-                            <div class = "indicator i-online"></div>
-                            <div class = "indicator i-online"></div>
-                            <div class = "indicator i-online"></div>
-                            <div class = "indicator i-online"></div>
-                        </div>
-                    </td>
-                </tr>
-                <tr>
-                    <td>hello world</td>
-                </tr>
-                <tr>
-                    <td>hello world</td>
-                </tr>
-            </tbody>
+            <tbody></tbody>
         </table>
+        <footer><p>Copyright (c) 2023 <a href = "https://iipython.dev">iiPython</a></p></footer>
 
         <!-- JS -->
         <script src = "https://unpkg.com/@popperjs/core@2"></script>
