Loading QOL improvements

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     </head>
     <body>
         <h3 id = "header">iiPython System Status</h3>
+        <div id = "spinner"></div>
         <table id = "table">
             <tbody></tbody>
         </table>
