Ensure JS files are async loaded

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <footer><p>Copyright (c) 2023 <a href = "https://iipython.dev">iiPython</a></p></footer>
 
         <!-- JS -->
-        <script src = "https://unpkg.com/@popperjs/core@2"></script>
-        <script src = "./src/main.js"></script>
+        <script src = "https://unpkg.com/@popperjs/core@2" async></script>
+        <script src = "./src/main.js" async></script>
     </body>
 </html>
