Add favicon for extra oomph

--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!doctype html>
 <html lang = "en">
     <head>
-        <meta charset = "utf-8">
+        <meta charset = "utf-8" />
+        <meta name = "viewport" content = "width=device-width, initial-scale=1" />
+        <meta name = "description" content = "Status page for all of iiPython's web services. If something goes offline, this will be the first to show it." />
 
         <!-- Fonts -->
         <link rel = "preconnect" href = "https://fonts.googleapis.com">
@@ -63,6 +65,9 @@
                 100% { transform: rotate(360deg); }
             }
         </style>
+
+        <!-- Icon & page title -->
+        <link rel = "icon" type = "image/x-icon" href = "./favicon.ico">
         <title>Statuspage</title>
     </head>
     <body>
