--- a/index.html
+++ b/index.html
@@ -6,11 +6,18 @@
         <meta name = "description" content = "Status page for all of iiPython's web services. If something goes offline, this will be the first to show it." />
 
         <!-- Fonts -->
-        <link rel = "preconnect" href = "https://fonts.googleapis.com">
         <link rel = "preconnect" href = "https://fonts.gstatic.com" crossorigin>
 
         <!-- CSS --> 
         <style type = "text/css">
+            @font-face {
+                font-family: "Quicksand";
+                font-style: normal;
+                font-weight: 400;
+                font-display: block;
+                src: url(https://fonts.gstatic.com/s/quicksand/v30/6xK-dSZaM9iE8KbpRA_LJ3z8mH9BOJvgkP8o58a-wg.woff2) format('woff2');
+                unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+            }
             html, body {
                 color: #fefefe;
                 background-color: #000;
@@ -79,12 +86,8 @@
         <footer><p>Copyright (c) 2023 <a href = "https://iipython.dev">iiPython</a></p></footer>
 
         <!-- Deferred CSS -->
-        <link rel = "preload" href = "https://fonts.googleapis.com/css2?family=Quicksand&display=swap" as = "style" onload = "this.onload=null;this.rel='stylesheet'">
         <link rel = "preload" href = "./src/main.css" as = "style" onload = "this.onload=null;this.rel='stylesheet'">
-        <noscript>
-            <link rel = "stylesheet" href = "https://fonts.googleapis.com/css2?family=Quicksand&display=swap">
-            <link rel = "stylesheet" href = "./src/main.css">
-        </noscript>
+        <noscript><link rel = "stylesheet" href = "./src/main.css"></noscript>
 
         <!-- JS -->
         <script src = "https://unpkg.com/@popperjs/core@2" async></script>
