--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 font-style: normal;
                 font-weight: 400;
                 font-display: block;
-                src: url(https://fonts.gstatic.com/s/quicksand/v30/6xK-dSZaM9iE8KbpRA_LJ3z8mH9BOJvgkP8o58a-wg.woff2) format('woff2');
+                src: url(./src/fonts/quicksand.woff2) format("woff2");
                 unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
             }
             html, body {
@@ -90,7 +90,7 @@
         <noscript><link rel = "stylesheet" href = "./src/main.css"></noscript>
 
         <!-- JS -->
-        <script src = "https://unpkg.com/@popperjs/core@2" async></script>
-        <script src = "./src/main.js" async></script>
+        <script src = "./src/js/popper-lite.min.js" async></script>
+        <script src = "./src/js/main.js" async></script>
     </body>
 </html>
