--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
         <meta charset = "utf-8" />
         <meta name = "viewport" content = "width=device-width, initial-scale=1" />
         <meta name = "description" content = "Status page for all of iiPython's web services. If something goes offline, this will be the first to show it." />
+        <meta name = "darkreader-lock">
 
         <!-- CSS --> 
         <style type = "text/css">
@@ -13,7 +14,6 @@
                 font-weight: 400;
                 font-display: block;
                 src: url(./src/fonts/quicksand.woff2) format("woff2");
-                unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
             }
             html, body {
                 color: #E7E5E2;
