I hate git stashing

--- a/src/index.html
+++ b/src/index.html
@@ -48,7 +48,7 @@
             }
 
             /* Mobile layout */
-            @media screen and (min-width: 700px) {
+            @media screen and (max-width: 700px) {
                 h3#header {
                     top: 30px;
                     left: 50%;
