Discord meta update

--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,12 @@
     <head>
         <meta charset = "utf-8" />
         <meta name = "viewport" content = "width=device-width, initial-scale=1" />
+        <meta name = "og:title" content = "iiPython Statuspage" />
+        <meta name = "og:description" content = "Accurate service information, updated hourly." />
+
+        <meta name = "theme-color" content = "#fff" />
         <meta name = "description" content = "Status page for all of iiPython's web services. If something goes offline, this will be the first to show it." />
-        <meta name = "darkreader-lock">
+        <meta name = "darkreader-lock" />
 
         <!-- CSS --> 
         <style type = "text/css">
