--- a/src/index.html
+++ b/src/index.html
@@ -98,7 +98,7 @@
         <table id = "table">
             <tbody></tbody>
         </table>
-        <footer><p>Copyright (c) 2023 <a href = "https://iipython.dev">iiPython</a></p></footer>
+        <footer><p>Copyright (c) 2023-2024 <a href = "https://iipython.dev">iiPython</a></p></footer>
 
         <!-- Deferred CSS -->
         <link rel = "preload" href = "./src/main.css" as = "style" id = "maincss">
